--- a/src/components/Events/Events.module.css
+++ b/src/components/Events/Events.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   height: 100vh;
   width: 100%;
   position: relative;
@@ -6,8 +6,15 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-text);
+} */
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  width: 100%;
+  height: 110vh;
 }
-
 .headerContainer {
   margin: 0 auto;
   width: 100%;
@@ -146,5 +153,20 @@
   }
   .eventDate h3 {
     font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .container {
+    height: max-content;
+    margin-top: 10%;
+  }
+  .eventListContainer {
+    width: 100%;
+    flex-direction: column;
+  }
+  .headerContainer h1 {
+    font-size: 30px;
+    width: 200px;
   }
 }
